--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,10 @@ body {
   font-family: "Inter";
 }
 
-textarea,input,select,button{
+textarea,
+input,
+select,
+button {
   font-family: "Inter";
 }
 @keyframes App-logo-spin {
@@ -16,35 +19,33 @@ textarea,input,select,button{
   }
 }
 
-*{
-  user-select:none;
+* {
+  user-select: none;
 }
 
-
-
-.resized_dynamic_menu,.dynamic_menu {
+.resized_dynamic_menu,
+.dynamic_menu {
   position: absolute;
   overflow: hidden;
-  top: 60px;
+  top: 80px;
   left: 0;
   right: 0;
   bottom: 0;
   display: grid;
 }
 
-.dynamic_menu{
+.dynamic_menu {
   grid-template-columns: 1.4fr 6fr 1.4fr;
 }
 
-.resized_dynamic_menu{
+.resized_dynamic_menu {
   grid-template-columns: 1.7fr 6fr 3fr;
 }
 
-.resizable{
+.resizable {
   background-color: red;
   z-index: 99999;
 }
-
 
 .react-flow__attribution a {
   display: none;
@@ -55,7 +56,7 @@ textarea,input,select,button{
   width: 5px;
   /* Width of the scrollbar */
   height: 5px;
-  background-color: rgb(213, 232, 243)
+  background-color: rgb(213, 232, 243);
 }
 
 /* Customize the scrollbar thumb (the draggable part) */
@@ -63,7 +64,6 @@ textarea,input,select,button{
   background-color: rgb(74, 148, 190);
   border-radius: 6px;
   /* Rounded corners for the thumb */
-
 }
 
 /* Customize the scrollbar track on hover */
