--- a/src/components/Modals/FlowsListModal/FlowsListModal.module.scss
+++ b/src/components/Modals/FlowsListModal/FlowsListModal.module.scss
@@ -24,23 +24,13 @@
     border-radius: 5px;
     padding: 10px;
     margin-bottom: 10px;
-
   }
 
   .footer {
     display: flex;
-    justify-content: end;
-
+    justify-content: center;
     button {
-      background-color: $bg-top-menu-btn-default;
-      border: 0;
-      padding-top: 10px;
-      padding-bottom: 10px;
-      padding-left: 20px;
-      padding-right: 20px;
-      border-radius: 5px;
-      margin-left: 5px;
-      color: white;
+      @include blue_btn;
     }
   }
 }
