--- a/src/style/mixins_elements/wrappers.scss
+++ b/src/style/mixins_elements/wrappers.scss
@@ -117,6 +117,14 @@
   }
 }
 
+@mixin dropdown_menu_section_title {
+  text-align: center;
+  color: black;
+  padding: 5px;
+  border-bottom: 1px solid rgb(230, 230, 230);
+  background-color: rgb(245, 245, 245);
+}
+
 //Right Panel
 @mixin section_header_container {
   padding-top: 15px;
