--- a/src/components/Server/CenterPanel/Server/ServerTable/ServerTable.module.scss
+++ b/src/components/Server/CenterPanel/Server/ServerTable/ServerTable.module.scss
@@ -2,18 +2,16 @@
 @import "/src/style/mixins.scss";
 
 .wrapper {
-  background-color: white;
-
   .header {
     display: grid;
     grid-template-columns: 4fr 4fr 4fr;
 
-    .log_search_btn_wrapper{
+    .log_search_btn_wrapper {
       display: flex;
       align-items: center;
       margin-left: 20px;
 
-      button{
+      button {
         @include blue-btn;
         margin-right: 5px;
       }
@@ -69,7 +67,42 @@
     }
   }
 
-  .main_table {
-    @include server_table;
+  .main_container {
+    display: grid;
+    grid-template-columns: 4fr 4fr 4fr;
+    justify-content: center;
+
+    align-items: baseline;
+    gap: 10px;
+
+    padding: 20px;
+
+    margin-left: auto;
+    margin-right: auto;
+
+    .main_table {
+      // @include server_table;
+      width: 100%;
+      background-color: white;
+      border: 1px solid rgb(228, 228, 228);
+      border-radius: 5px;
+      margin-bottom: 20px;
+      padding: 10px;
+      box-shadow: $shadow-node-nav-container;
+
+      overflow-y: scroll;
+
+      td {
+        padding: 10px; /* или padding: 16px 24px; */
+        font-size: 0.8rem;
+        width: 200px;
+        text-align: end;
+      }
+
+      td:nth-child(odd) {
+        font-weight: bold;
+        text-align: start;
+      }
+    }
   }
 }
