--- a/src/components/Server/CenterPanel/Server/ServerTable/ServerTable.module.scss
+++ b/src/components/Server/CenterPanel/Server/ServerTable/ServerTable.module.scss
@@ -6,6 +6,14 @@
     display: grid;
     grid-template-columns: 4fr 4fr 4fr;
 
+    background-color: white;
+    border: 1px solid rgb(228, 228, 228);
+    border-radius: 5px;
+    box-shadow: $shadow-node-nav-container;
+    margin-right: 20px;
+    margin-left: 20px;
+    margin-top: 10px;
+
     .log_search_btn_wrapper {
       display: flex;
       align-items: center;
@@ -69,40 +77,21 @@
 
   .main_container {
     display: grid;
-    grid-template-columns: 4fr 4fr 4fr;
-    justify-content: center;
-
-    align-items: baseline;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     gap: 10px;
-
     padding: 20px;
+    margin: 0 auto;
+    align-items: stretch;
 
-    margin-left: auto;
-    margin-right: auto;
+    .col_one,
+    .col_two,
+    .col_three {
+      display: flex;
+      flex-direction: column;
+    }
 
     .main_table {
-      // @include server_table;
-      width: 100%;
-      background-color: white;
-      border: 1px solid rgb(228, 228, 228);
-      border-radius: 5px;
-      margin-bottom: 20px;
-      padding: 10px;
-      box-shadow: $shadow-node-nav-container;
-
-      overflow-y: scroll;
-
-      td {
-        padding: 10px; /* или padding: 16px 24px; */
-        font-size: 0.8rem;
-        width: 200px;
-        text-align: end;
-      }
-
-      td:nth-child(odd) {
-        font-weight: bold;
-        text-align: start;
-      }
+      @include serverStatusTables;
     }
   }
 }
