--- a/src/components/VisualMapping/Header/Header.module.scss
+++ b/src/components/VisualMapping/Header/Header.module.scss
@@ -10,26 +10,35 @@
   top: 0;
   left: 0;
   right: 0;
-  display: grid;
-  grid-template-columns: 12fr;
 
-  align-items: center;
   height: 50px;
+
   .grid {
     height: 100%;
-    display: flex;
+    display: grid;
+
+    grid-template-columns: 4fr 4fr 4fr;
     align-items: center;
     position: relative;
 
-    span {
+    .first_col {
+      padding-left: 20px;
+    }
+
+    .second_col {
       font-size: 1.3rem;
       text-align: center;
       width: 100%;
       letter-spacing: 20px;
     }
+
+    .third_col {
+      display: flex;
+      justify-content: end;
+      padding-right: 20px;
+    }
+
     button {
-      position: absolute;
-      left: 20px;
       @include blue-btn;
     }
   }
