--- a/src/views/style/Login.module.scss
+++ b/src/views/style/Login.module.scss
@@ -15,6 +15,7 @@
   justify-content: center;
 
   .logo_wrapper {
+    display: flex;
     justify-content: center;
     align-items: center;
   }
@@ -37,6 +38,9 @@
       background-image: linear-gradient(white, rgb(179, 209, 170));
       padding: 20px 40px 100px 40px;
       position: relative;
+
+      display: flex;
+      flex-direction: column;
 
       font-weight: $font-weight-regular;
       font-variation-settings: "slnt";
